unpackaged/main/default/objects/Pipeline_Snapshot__c/Pipeline_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Pipeline Snapshot</label>
    <nameField>
        <displayFormat>PS-{0000000000}</displayFormat>
        <label>Pipeline Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>