unpackaged/main/default/objects/Pipeline_Snapshot__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pipeline Snapshots</relationshipLabel>
    <relationshipName>Pipeline_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>