unpackaged/main/default/objects/Pipeline_Snapshot__c/fields/Log_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_In_Date__c</fullName>
    <label>Log In Date</label>
    <type>Date</type>
</CustomField>