unpackaged/main/default/objects/Pipeline_Snapshot__c/fields/Pipeline_Name__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Name__c</fullName>
    <label>Pipeline Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>