unpackaged/main/default/objects/Pipeline_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>