unpackaged/main/default/objects/Pipeline_Snapshot__c/fields/Snapshot_Month_Dates__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Month_Dates__c</fullName>
    <formula>Snapshot_Date__c</formula>
    <label>Snapshot Month (Date)</label>
    <type>Date</type>
</CustomField>