unpackaged/main/default/objects/Pipeline_Snapshot__c/fields/Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact__c</fullName>
    <label>Source Contact</label>
    <type>TextArea</type>
</CustomField>