unpackaged/main/default/objects/Pipeline_Snapshot__c/fields/Source_Firm__c.field-meta.xml
<CustomField>
    <fullName>Source_Firm__c</fullName>
    <label>Source Firm</label>
    <type>TextArea</type>
</CustomField>