unpackaged/main/default/objects/Pipeline_Snapshot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Idea Generation</fullName>
            </value>
            <value>
                <fullName>New/Initial Interest</fullName>
            </value>
            <value>
                <fullName>Significant Interest</fullName>
            </value>
            <value>
                <fullName>First Round Bid</fullName>
            </value>
            <value>
                <fullName>Second Round Bid</fullName>
            </value>
            <value>
                <fullName>Serious Pursuit</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>Moving toward Close</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Declined/Dead</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>