unpackaged/main/default/objects/Pipeline_Snapshot__c/listViews/Detailed_View.listView-meta.xml
<ListView>
    <fullName>Detailed_View</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Pipeline_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed View</label>
    <language>en_US</language>
</ListView>